feat: Update requirements and documentation for Medical Report ETL System
- Updated requirements.txt to include core dependencies for OCR and PDF processing.
- Removed unnecessary dependencies (pandas, numpy, etc.) from requirements.
- Added CHANGELOG.md to document notable changes and version history.
- Created CONTRIBUTING.md to guide contributors on how to contribute effectively.
- Added LICENSE file for MIT License.
- Introduced SECURITY.md to outline security practices and vulnerability reporting.
- Added ROADMAP.md to outline future development plans and goals.
- Refactored __init__.py to expose relevant modules and functions.
- Removed old __init__.py file that contained broken exports.
- Updated binary files in __pycache__ due to code changes.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@ credentials.json
 # Local Tracking Document (not committed, internal reference only)
 doc.md
 Sandbox
-docs_local
+docs_local/
+
+# Original task assignment document (internal context)
+Appendix A - Report Format.md
 
 # ============================================================================
 # PYTHON & VIRTUAL ENVIRONMENT
